--- a/HTML/chats.html
+++ b/HTML/chats.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friends - Kokoa Clone</title>
+  <title>chats - Kokoa Clone</title>
 </head>
 <body>
   <div class="status-bar">
@@ -24,56 +24,33 @@
   </div>
 
   <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass fa-la"></i></span>
+            <span><i class="fa-regular fa-comment-dots fa-la"></i></span>
             <span><i class="fa-solid fa-music fa-la"></i></span>
             <span><i class="fa-solid fa-gear fa-la"></i></span></div>
         </div>
   </header>
 
-  <a id="friends-display-link">
-    <i class="fa-solid fa-circle-info"></i>
-    Friends's Name Display
-    <i class="fa-solid fa-chevron-right fa-xs"></i>
-  </a>
-
-  <main class="friends-screen">
+  <main class="main-screen">
     <div class="user-component">
       <div class="user-component__column">
         <img
           src="https://blogpfthumb-phinf.pstatic.net/MjAyMzAzMDhfMjU4/MDAxNjc4MjAxMjg1MDMw.ZSWvsbK3zbM7X2zzsQZ9YFPPMya1Sdp1YPC-TeQpqtwg.zGtys-cxACHp908exONgmmf_1i6sl8in4E16s4AH7osg.PNG.stitch_1004/profileImage.png?type=w161"
-          class="user-component__avatar user-component__avatar--xl"
+          class="user-component__avatar user-component__avatar"
         />
         <div class="user-component__text">
           <h4 class="user-component__title">Jeong Eun</h4>
-          <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          <h6 class="user-component__subtitle">
+            Please check my KoKoa Account Info
+          </h6>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
-    <div class="friends-screen__channel">
-      <div class="friends-screen__channel-header">
-        <span>Channel</span>
-        <i class="fas fa-chevron-up fa-xs"></i>
-      </div>
-      <div class="user-component">
         <div class="user-component__column">
-          <img
-            src="https://blogpfthumb-phinf.pstatic.net/MjAyMzAzMDhfMjU4/MDAxNjc4MjAxMjg1MDMw.ZSWvsbK3zbM7X2zzsQZ9YFPPMya1Sdp1YPC-TeQpqtwg.zGtys-cxACHp908exONgmmf_1i6sl8in4E16s4AH7osg.PNG.stitch_1004/profileImage.png?type=w161"
-            class="user-component__avatar user-component__avatar--sm"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title user-component__title--not-bold">
-              Channel
-            </h4>
-          </div>
+          <span class="user-component__time">21:22</span> 
+          <div class="badge">1</div>
         </div>
-        <div class="user-component__column">
-          <div><span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i></div>
-        </div>
-      </div>
     </div>
   </main>
 
@@ -81,13 +58,13 @@
     <ul class ="nav__list">
         <li class ="nav__btn">
             <a class="nav__link" href="friends.html">
-            <i class="fa-solid fa-user fa-2x"></i>
+            <i class="fa-regular fa-user fa-2x"></i>
         </a>
         </li>
         <li class ="nav__btn">
             <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i>
+            <i class="fa-solid fa-comment fa-2x"></i>
         </a>
         </li>
         <li class ="nav__btn">
